# boardgame

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  main.ipynb  main.py  pyproject.toml  test.ipynb  test.py
.github/workflow/: tests.yaml
.github/workflows/: tests.yaml
data/: game_0.json
data/games/: 000.json  001.json  002.json
game_logic/: board.py  city.py  dice.py  game.py  player.py  units.py  units_stats.json  worker.py
src/app/: main.py
src/fixtures/: game_0.json
src/game_logic/: actions.py  board.py  city.py  dice.py  game.py  player.py  units.py  worker.py
src/game_logic/terrain_generation/: perlin_noise.py
test/unit/: test_actions.py  test_game_logic.py
