[tool.poetry]
name = "boardgame"
version = "0.1.0"
description = ""
authors = ["mmilanta <marco.milanta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
requests = "^2.31.0"
perlin-noise = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
